--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Jurgen Palsma's personal website",
   "author": "Jurgen Palsma",
   "private": false,
-  "homepage": "https://github.com/JurgenPalsma/jurgen-cv",
+  "homepage": "https://github.com/JurgenPalsma/JurgenPalsma.github.io",
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
