--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Jurgen Palsma's personal website",
   "author": "Jurgen Palsma",
   "private": false,
-  "homepage": "https://github.com/JurgenPalsma/jurgen-cv",
+  "homepage": "https://github.com/JurgenPalsma/portfolio",
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
@@ -12,8 +12,11 @@
     "deploy": "node ./node_modules/vue-gh-pages/index.js"
   },
   "dependencies": {
+    "cross-env": "5.1.5",
+    "express": "4.16.3",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-server-renderer": "2.5.16"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -47,6 +50,7 @@
     "url-loader": "^0.5.8",
     "vue-gh-pages": "1.16.0",
     "vue-loader": "^13.3.0",
+    "vue-ssr-webpack-plugin": "3.0.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.6.0",
